--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,6 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
   "main": "service.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,5 +22,7 @@
     "mongoose": "^7.6.3",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
