--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
