--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_CONNECTION_STRING=mongodb://localhost:27017/myecommerce
+DB_CONNECTION_STRING=mongodb://localhost:27017/
 SECRET_KEY=mysecretkey
