--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "validator": "^13.11.0",
     "xss": "^1.0.14"
