--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5000
-DB_CONNECTION_STRING=mongodb://localhost:27017/
+DB_CONNECTION_STRING=mongodb+srv://brahimelkaceh:sjOvoIDtlv0bBBl0@cluster1.tikgpsk.mongodb.net/ecommerce
 SECRET_KEY=mysecretkey
