--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/brahimelkaceh/eCommerce#readme",
   "dependencies": {
+    "@azure/storage-blob": "^12.16.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -25,14 +26,15 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1",
-    "xss": "^1.0.14",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "nodemon": "^3.0.1",
+    "sharp": "^0.32.6",
     "start": "^5.1.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
