--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
-    "styled-components": "^6.1.0"
+    "styled-components": "^6.1.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
