--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,5 @@
 PORT=5000
-<<<<<<< HEAD
-DB_CONNECTION_STRING=mongodb+srv://brahimelkaceh:sjOvoIDtlv0bBBl0@cluster1.tikgpsk.mongodb.net/
-=======
-DB_CONNECTION_STRING=mongodb://0.0.0.0:27017
->>>>>>> aa3d0394c78f9d2bdd4fad7e9ebc9af3bd9134e1
+DB_CONNECTION_STRING=mongodb+srv://elghe:HwZ2LEMzqrig9kTo@cluster0.vj32cse.mongodb.net/eCommerce?retryWrites=true&w=majority
 SECRET_KEY=mysecretkey
 GMAIL_USERNAME=elghedesigns@gmail.com
 GMAIL_PASSWORD=hvva dkcf figt evkd
