--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-DB_CONNECTION_STRING=mongodb+srv://brahimelkaceh:sjOvoIDtlv0bBBl0@cluster1.tikgpsk.mongodb.net/
+DB_CONNECTION_STRING=mongodb://0.0.0.0:27017
 SECRET_KEY=mysecretkey
 GMAIL_USERNAME=elghedesigns@gmail.com
 GMAIL_PASSWORD=hvva dkcf figt evkd
