--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
     "styled-components": "^6.1.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.4",
     "yup": "^1.3.2"
   },
