--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,8 +32,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.18.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.0",
     "swiper": "^11.0.4",
+    "uuid": "^9.0.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
