--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "@mui/styles": "^5.14.17",
     "@mui/x-charts": "^6.18.1",
     "@mui/x-data-grid-generator": "^6.18.1",
+    "@nivo/bar": "^0.84.0",
     "@nivo/line": "^0.83.1",
+    "@nivo/pie": "^0.84.0",
     "antd": "^5.10.3",
     "apexcharts": "^3.44.0",
     "axios": "^1.6.1",
